# yellowbull

./: .coverage  .gitignore  README.md  pyproject.toml
project/: 00-infrastructure-tasks.md  01-task-reception-and-breakdown.md  01-task-reception-tasks.md  02-experience-system-tasks.md  02-experience-system.md  03-task-execution-engine-tasks.md  03-task-execution-engine.md  04-task-result-aggregation-tasks.md  04-task-result-aggregation.md  acceptance-criteria.md  development-plan.md  project.md  setup-command-design.md
project/测试计划/: 00-基础设施-测试计划.md  01-任务接收与步骤拆解-测试计划.md  02-经验系统-测试计划.md  03-任务执行引擎-测试计划.md  04-任务结果汇总-测试计划.md
project/验收标准/: 00-基础设施-验收标准.md  01-任务接收与步骤拆解-验收标准.md  02-经验系统-验收标准.md  03-任务执行引擎-验收标准.md  04-任务结果汇总-验收标准.md
src/yellowbull/: __init__.py
tests/: conftest.py
tests/fixtures/: settings_invalid.yaml  settings_valid.yaml  test_file.txt
tests/integration/: test_config_chain.py  test_execution_flow.py
tests/unit/: test_aggregator.py  test_branch.py  test_branch_boundary.py  test_breakdown.py  test_budget_boundary.py  test_code_tool.py  test_completion_boundary.py  test_completion_evaluator.py  test_config.py  test_context_store.py  test_database.py  test_engine.py  test_error_boundary.py  test_execution_stack.py  test_execution_stack_boundary.py  test_executor.py  test_experience.py  test_failure_handler.py  test_file_tool.py  test_guard.py  test_llm_client.py  test_loop_boundary.py  test_models.py  test_obstacle_boundary.py  test_obstacle_resolution.py  test_obstacle_resolver.py  test_plan_display.py  test_receiver.py  test_retriever.py  (+9 more)
(+48 files in other folders)
